--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>kotlin-sockets</module>
         <module>examples</module>
+        <module>jmh-benchmark</module>
     </modules>
 
     <properties>
@@ -24,6 +25,7 @@
         <kotlin.version>1.1.1</kotlin.version>
         <junit.version>4.12</junit.version>
         <coroutines.version>0.14</coroutines.version>
+        <jmh.version>1.18</jmh.version>
     </properties>
 
     <dependencyManagement>
