--- a/jmh-benchmark/pom.xml
+++ b/jmh-benchmark/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>jmh-benchmark</artifactId>
 
+    <properties>
+        <netty.version>4.1.9.Final</netty.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.github.cy6erGn0m</groupId>
@@ -32,6 +36,11 @@
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-generator-annprocess</artifactId>
             <version>${jmh.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>${netty.version}</version>
         </dependency>
     </dependencies>
 
