--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
+        <groupId>org.jetbrains.kotlinx</groupId>
         <artifactId>kotlin-sockets-parent</artifactId>
-        <groupId>com.github.cy6erGn0m</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -13,7 +13,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.cy6erGn0m</groupId>
+            <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlin-sockets</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -24,6 +24,17 @@
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>com.devexperts.bintray</groupId>
+                <artifactId>bintray-maven-plugin</artifactId>
+                <version>1.3</version>
+                <goals>
+                    <goal>publish</goal>
+                </goals>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
             </plugin>
         </plugins>
     </build>
