--- a/jmh-benchmark/pom.xml
+++ b/jmh-benchmark/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
+        <groupId>org.jetbrains.kotlinx</groupId>
         <artifactId>kotlin-sockets-parent</artifactId>
-        <groupId>com.github.cy6erGn0m</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -17,12 +17,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.cy6erGn0m</groupId>
+            <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlin-sockets</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.github.cy6erGn0m</groupId>
+            <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>examples</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -130,6 +130,22 @@
                 <configuration>
                     <skip>true</skip>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.devexperts.bintray</groupId>
+                <artifactId>bintray-maven-plugin</artifactId>
+                <version>1.3</version>
+                <executions>
+                    <execution>
+                        <id>bintray-deploy</id>
+                        <goals>
+                            <goal>publish</goal>
+                        </goals>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
 
