--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,18 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.cy6erGn0m</groupId>
+    <groupId>org.jetbrains.kotlinx</groupId>
     <artifactId>kotlin-sockets-parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Kotlinx sockets</name>
+    <url>https://github.com/cy6erGn0m/kotlinx.sockets</url>
+    <scm>
+        <url>https://github.com/cy6erGn0m/kotlinx.sockets</url>
+        <connection>scm:git:git@github.com:cy6erGn0m/kotlinx.sockets.git</connection>
+        <tag>HEAD</tag>
+    </scm>
 
     <modules>
         <module>kotlin-sockets</module>
@@ -26,6 +32,8 @@
         <junit.version>4.12</junit.version>
         <coroutines.version>0.14.1</coroutines.version>
         <jmh.version>1.18</jmh.version>
+
+        <bintray.url>https://api.bintray.com/maven/kotlin/kotlin-dev/kotlinx.sockets</bintray.url>
     </properties>
 
     <dependencyManagement>
@@ -96,7 +104,50 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+
+        <plugins>
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+
+                <configuration>
+                    <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.devexperts.bintray</groupId>
+                <artifactId>bintray-maven-plugin</artifactId>
+                <version>1.3</version>
+                <executions>
+                    <execution>
+                        <id>bintray-deploy</id>
+                        <goals>
+                            <goal>publish</goal>
+                        </goals>
+                        <configuration>
+                            <id>bintray</id>
+                            <url>${bintray.url}</url>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
+
+    <distributionManagement>
+        <repository>
+            <id>bintray</id>
+            <url>${bintray.url}</url>
+        </repository>
+    </distributionManagement>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>jcenter</id>
+            <name>JCenter</name>
+            <url>https://jcenter.bintray.com/</url>
+        </pluginRepository>
+    </pluginRepositories>
 
     <repositories>
         <repository>
