--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.jetbrains.kotlinx</groupId>
     <artifactId>kotlin-sockets-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <packaging>pom</packaging>
 
     <name>Kotlinx sockets</name>
@@ -14,7 +13,7 @@
     <scm>
         <url>https://github.com/cy6erGn0m/kotlinx.sockets</url>
         <connection>scm:git:git@github.com:cy6erGn0m/kotlinx.sockets.git</connection>
-        <tag>HEAD</tag>
+        <tag>kotlin-sockets-parent-0.0.1</tag>
     </scm>
 
     <modules>
