sources and empty javadoc jar

--- a/kotlin-sockets/pom.xml
+++ b/kotlin-sockets/pom.xml
@@ -42,6 +42,29 @@
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>javadoc</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <configuration>
+                            <classifier>javadoc</classifier>
+                            <skipIfEmpty>false</skipIfEmpty>
+                            <forceCreation>true</forceCreation>
+                            <excludes>
+                                <exclude>**/*</exclude>
+                            </excludes>
+                            <useDefaultManifestFile>false</useDefaultManifestFile>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
