--- a/kotlinx-http-server/pom.xml
+++ b/kotlinx-http-server/pom.xml
@@ -22,6 +22,12 @@
             <artifactId>kotlin-sockets</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains.ktor</groupId>
+            <artifactId>ktor-hosts-common</artifactId>
+            <version>0.3.2</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -41,5 +47,15 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>ktor</id>
+            <url>https://kotlin.bintray.com/ktor</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
 </project>
