--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
         <kotlin.version>1.1.2-3</kotlin.version>
         <junit.version>4.12</junit.version>
-        <coroutines.version>0.15</coroutines.version>
+        <coroutines.version>0.17-SNAPSHOT</coroutines.version>
         <jmh.version>1.18</jmh.version>
 
         <bintray.url>https://api.bintray.com/maven/kotlin/kotlin-dev/kotlinx.sockets</bintray.url>
