--- a/kotlin-sockets/pom.xml
+++ b/kotlin-sockets/pom.xml
@@ -30,7 +30,7 @@
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
-            <artifactId>kotlinx-coroutines-nio</artifactId>
+            <artifactId>kotlinx-coroutines-io</artifactId>
         </dependency>
     </dependencies>
 
