--- a/pom.xml
+++ b/pom.xml
@@ -20,16 +20,18 @@
         <module>kotlin-sockets</module>
         <module>examples</module>
         <module>jmh-benchmark</module>
+        <module>implementations/kotlinx-http</module>
     </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
 
         <kotlin.version>1.1.4-2</kotlin.version>
         <junit.version>4.12</junit.version>
-        <coroutines.version>0.17-SNAPSHOT</coroutines.version>
+        <coroutines.version>0.18-SNAPSHOT</coroutines.version>
         <jmh.version>1.18</jmh.version>
 
         <bintray.url>https://api.bintray.com/maven/kotlin/kotlin-dev/kotlinx.sockets</bintray.url>
