HTTP: add http to benchmarks module

--- a/jmh-benchmark/pom.xml
+++ b/jmh-benchmark/pom.xml
@@ -21,6 +21,11 @@
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-http</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>examples</artifactId>
             <version>${project.version}</version>
         </dependency>
