--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
         <kotlin.version>1.1.4-2</kotlin.version>
         <junit.version>4.12</junit.version>
-        <coroutines.version>0.18-SNAPSHOT</coroutines.version>
+        <coroutines.version>0.19-alpha-6</coroutines.version>
         <jmh.version>1.18</jmh.version>
 
         <bintray.url>https://api.bintray.com/maven/kotlin/kotlin-dev/kotlinx.sockets</bintray.url>
